Crash VSE - Circular dependence of scenes as strip #81426

Closed
opened 2020-10-04 10:04:56 +02:00 by Kevinn RAJAONA · 7 comments

System Information
Operating system: Windows10
Graphics card: NVIDIA GTX1050Ti

Blender Version
Broken: 2.90.1
Worked:

Short description of error
Blender crashes when having 2 scenes (a and b), adding the scene b as strip in scene a’s VSE, then adding the scene a as strip in scene b’s VSE

Exact steps for others to reproduce the error
*Create 2 scenes : « a and b » (the names are arbitrary) in one blend file
*In the Scene a: Shift+A > Add Scene > a
*Set the strip input as « Sequencer »
*In the Scene b: Shift+A > Add Scene > b
*Set the strip input as « Sequencer

Thanks! Spend a good day 😉

**System Information** Operating system: Windows10 Graphics card: NVIDIA GTX1050Ti **Blender Version** Broken: 2.90.1 Worked: **Short description of error** Blender crashes when having 2 scenes (a and b), adding the scene b as strip in scene a’s VSE, then adding the scene a as strip in scene b’s VSE **Exact steps for others to reproduce the error** *Create 2 scenes : « a and b » (the names are arbitrary) in one blend file *In the Scene a: Shift+A > Add Scene > a *Set the strip input as « Sequencer » *In the Scene b: Shift+A > Add Scene > b *Set the strip input as « Sequencer Thanks! Spend a good day 😉
Author

Added subscriber: @Kevinn

Added subscriber: @Kevinn

Added subscriber: @iss

Added subscriber: @iss

Changed status from 'Needs Triage' to: 'Confirmed'

Changed status from 'Needs Triage' to: 'Confirmed'

This happens in dependency graph in blender.exe!blender::deg::DepsgraphRelationBuilder::build_scene_sequencer(Scene * scene) Line 2701 C++

Will have a look at this.

This happens in dependency graph in `blender.exe!blender::deg::DepsgraphRelationBuilder::build_scene_sequencer(Scene * scene) Line 2701 C++` Will have a look at this.

We could use BKE_sequencer_check_scene_recursion() here, but that function was quite tailored for rendering unfortunately. Don't really want to dig through reasoning now so will look at this later this week when I will have bit more time.

We could use `BKE_sequencer_check_scene_recursion()` here, but that function was quite tailored for rendering unfortunately. Don't really want to dig through reasoning now so will look at this later this week when I will have bit more time.

This issue was referenced by 3deb4f4cb8

This issue was referenced by 3deb4f4cb8ba4558adbb24597fb799252449a799

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Richard Antalik self-assigned this 2020-10-26 00:35:26 +01:00
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#81426
No description provided.